--- a/PPC4/PPC4.html
+++ b/PPC4/PPC4.html
@@ -1,7 +1,7 @@
 <html>
     <!--//https://jqueryui.com/demos/-->
     <head>
-        <title>PPC - Pedagogical Pattern Composer v21</title>
+        <title>PPC - Pedagogical Pattern Composer v21 Kraval</title>
         <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.min.css"  type="text/css"/>
         <link rel="stylesheet" href="./css/style.css" type="text/css" media="screen, projection"/>
         <link rel="stylesheet" href="./css/textileToolbar.css">
