--- a/PPC4/segmentFile.html
+++ b/PPC4/segmentFile.html
@@ -71,7 +71,7 @@
         .splitter-horizontal {
             flex: 0 0 auto;
             height: 30px;
-            background: url(../"img/hsizegrip.png") center center no-repeat #535353;            
+            background: url(../"img._hsizegrip.png") center center no-repeat #535353;            
             cursor: row-resize;
         }
         .panel-bottom {
