--- a/PPC4/PPC4.html
+++ b/PPC4/PPC4.html
@@ -31,7 +31,7 @@
 <script src="./js/jquery.min.js"></script>
 <script src="./js/jquery-resizable.js"></script>
 		<script type="text/javascript">
-   window.onbeforeunload = function() { return "You work will be lost."; };
+   window.onbeforeunload = function() { return "Your work will be lost."; };
 </script>
 
 		
